2014-02-06  Charles Turner  <chturne@gmail.com>

	* CommonLisp.java: Proof-of-concept start to loading the CL
	primitives from the new primitives.lisp file.

2014-02-05  Charles Turner  <chturne@gmail.com>

	* CommonLisp.java: Expose *package* variable to the CL language.

2013-11-10  Per Bothner  <per@bothner.com>

	* defun.java:  Update for new 'formStack' and scanDefinitions API.
	* defvar.java: Likewise.
	* Lisp2Compilation.java: Likewise.

2013-07-05  Charles Turner  <chturne@gmail.com>

	* CommonLisp.java: Added new keywords for CL: INHERITED, EXTERNAL
	and INTERNAL for use in package lookups.

2013-08-25  Per Bothner  <per@bothner.com>

	* Lisp2.java (createReadTable): Specify that '#' is non-terminating.

2013-03-04  Charles Turner <chturne@gmail.com>

	* OrdinaryLambda.java: New class, extends kawa.lang.Lambda.
	* Makefile.am: Update accordingly.
	* CommonLisp.java (initLisp): Use OrdinaryLambda.
	(isEq): New field.

2012-12-31  Per Bothner  <per@bothner.com>

	* CommonLisp.java (initLisp): Update definitions of princ, prin1.
	(writeFormat, displayFormat): Mak public since needed by new functions.

2012-12-30  Charles Turner <chturne@gmail.com>
	    Per Bothner <per@bothner.com>

	* Lisp2.java: Added more documentation. Minor code cleanups.

2012-10-20  Charles Turner <chturne@gmail.com>
	    Per Bothner  <per@bothner.com>

	Re-factor type lookup to avoid Scheme dependencies.
	* CommonLisp.java: Don't use static Scheme methods.
	(getNamedType): New method.

2012-08-18  Per Bothner  <per@bothner.com>

	* Lisp2Compilation.java (rewriteBody): Use errorWithPosition.

2012-08-14  Charles Turner  <chturne@gmail.com>

	* Lisp2Compilation.java (rewriteBody): New method, process declare
	form.

2012-08-13  Charles Turner  <chturne@gmail.com>

	* CommonLisp.java: Add defun for internal flet rewriter.

2012-07-01  Charles Turner  <chturne@gmail.com>

	* Symbols.java (isSymbol): Fix the incorrect definition whereby a
	string was considered a symbol.
