@@ -1,3 +1,9 @@
+2014-02-07  Charles Turner  <chturne@gmail.com>
+
+	* PrimsOps.scm (cdr): Remove.
+	* primitives.lisp: Added first, cdr, rest, second, third, nthcdr,
+	nth, 1- and 1+.
+
 2014-02-06  Per Bothner  <per@bothner.com>
 
 	* PrimOps.scm (car): Remove.
